--- a/uncertainty_quantification_with_sngp_bert.ipynb
+++ b/uncertainty_quantification_with_sngp_bert.ipynb
@@ -363,8 +363,8 @@
       },
       "outputs": [],
       "source": [
-        "(clinc_train, clinc_test, clinc_test_oos), ds_info = tfds.load(\n",
-        "    'clinc_oos', split=['train', 'test', 'test_oos'], with_info=True, batch_size=-1)"
+        "(clinc_train, clinc_test, clinc_test_oos, clinc_validation), ds_info = tfds.load(\n",
+        "    'clinc_oos', split=['train', 'test', 'test_oos', 'validation'], with_info=True, batch_size=-1)"
       ]
     },
     {
@@ -391,14 +391,28 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.model_selection import train_test_split\n",
+        "# from sklearn.model_selection import train_test_split\n",
         "\n",
-        "X_train, X_test, y_train, y_test = train_test_split(\n",
-        "    train_examples.numpy(), train_labels.numpy(), test_size=0.20, random_state=42\n",
-        ")"
+        "# X_train, X_test, y_train, y_test = train_test_split(\n",
+        "#     train_examples.numpy(), train_labels.numpy(), test_size=0.20, random_state=42\n",
+        "# )"
       ],
       "metadata": {
         "id": "qbSn0wFmU1bv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "val_examples = clinc_validation['text']\n",
+        "val_labels = clinc_validation['intent']\n",
+        "\n",
+        "ind_val_data = (val_examples, val_labels)"
+      ],
+      "metadata": {
+        "id": "dzHUnj9htCtI"
       },
       "execution_count": null,
       "outputs": []
@@ -411,28 +425,20 @@
       },
       "outputs": [],
       "source": [
-        "eval_examples = clinc_test['text']\n",
-        "eval_labels = clinc_test['intent']\n",
+        "test_examples = clinc_test['text']\n",
+        "test_labels = clinc_test['intent']\n",
         "\n",
         "# Makes the in-domain (IND) evaluation data.\n",
-        "ind_eval_data = (clinc_test['text'], clinc_test['intent'])\n",
+        "ind_test_data = (test_examples, test_labels)\n",
         "\n",
-        "clinc_test['intent_name']"
+        "print('num intents {} :\\n {}'.format(len(np.unique(clinc_test['intent_name'])),\n",
+        "                       clinc_test['intent_name']))"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "LZw83kxySAGQ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [
-        "ind_eval_data"
+        "ind_test_data"
       ],
       "metadata": {
         "id": "eKuHFg8bQvbS"
@@ -466,7 +472,13 @@
         "\n",
         "# Converts into a TF dataset.\n",
         "ood_eval_dataset = tf.data.Dataset.from_tensor_slices(\n",
-        "    {\"text\": oos_texts, \"label\": oos_labels})"
+        "    {\"text\": oos_texts, \"label\": oos_labels})\n",
+        "\n",
+        "ood_eval_dataset_inscope = tf.data.Dataset.from_tensor_slices(\n",
+        "    {\"text\": oos_texts[:test_data_size], \"label\": oos_labels[:test_data_size]})\n",
+        "\n",
+        "ood_eval_dataset_oos = tf.data.Dataset.from_tensor_slices(\n",
+        "    {\"text\": oos_texts[-oos_data_size:], \"label\": oos_labels[-oos_data_size:]})"
       ]
     },
     {
@@ -495,7 +507,7 @@
       },
       "outputs": [],
       "source": [
-        "TRAIN_EPOCHS = 3\n",
+        "TRAIN_EPOCHS = 10\n",
         "TRAIN_BATCH_SIZE = 32\n",
         "EVAL_BATCH_SIZE = 256"
       ]
@@ -557,7 +569,7 @@
         "fit_configs = dict(batch_size=TRAIN_BATCH_SIZE,\n",
         "                   epochs=TRAIN_EPOCHS,\n",
         "                   validation_batch_size=EVAL_BATCH_SIZE, \n",
-        "                   validation_data=ind_eval_data)"
+        "                   validation_data=ind_test_data)"
       ]
     },
     {
@@ -576,7 +588,7 @@
     {
       "cell_type": "code",
       "source": [
-        "bert_out = bert_model.evaluate(eval_examples, eval_labels)"
+        "bert_out = bert_model.evaluate(test_examples, test_labels)"
       ],
       "metadata": {
         "id": "Ne5TbVnXWzcM"
@@ -598,7 +610,7 @@
     {
       "cell_type": "code",
       "source": [
-        "bert_predicted_labels = bert_model.predict(eval_examples)"
+        "bert_predicted_labels = bert_model.predict(test_examples)"
       ],
       "metadata": {
         "id": "p_ybzf_FXAU7"
@@ -609,12 +621,12 @@
     {
       "cell_type": "code",
       "source": [
-        "bert_f1_macro_score = sklearn.metrics.f1_score(eval_labels,\n",
+        "bert_f1_macro_score = sklearn.metrics.f1_score(test_labels,\n",
         "                         tf.math.argmax(bert_predicted_labels, axis=1),\n",
         "                         average='macro'\n",
         "                        )\n",
         "\n",
-        "bert_cm = sklearn.metrics.confusion_matrix(eval_labels,\n",
+        "bert_cm = sklearn.metrics.confusion_matrix(test_labels,\n",
         "                                 tf.math.argmax(bert_predicted_labels, axis=1)\n",
         "                                 )\n",
         "\n",
@@ -653,7 +665,18 @@
     {
       "cell_type": "code",
       "source": [
-        "sngp_out = sngp_model.evaluate(eval_examples, eval_labels)"
+        "train_labels"
+      ],
+      "metadata": {
+        "id": "Nk_3EIDovpK2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sngp_out = sngp_model.evaluate(test_examples, test_labels)"
       ],
       "metadata": {
         "id": "DuAohrdS0mkJ"
@@ -675,7 +698,7 @@
     {
       "cell_type": "code",
       "source": [
-        "predicted_labels = sngp_model.predict(eval_examples)"
+        "predicted_labels = sngp_model.predict(test_examples)"
       ],
       "metadata": {
         "id": "1cz477uV5PXx"
@@ -686,7 +709,8 @@
     {
       "cell_type": "code",
       "source": [
-        "eval_labels"
+        "# for test_label in test_labels:\n",
+        "#   print(test_label)"
       ],
       "metadata": {
         "id": "jayS4Fld46Bm"
@@ -708,12 +732,12 @@
     {
       "cell_type": "code",
       "source": [
-        "f1_macro_score = sklearn.metrics.f1_score(eval_labels,\n",
+        "f1_macro_score = sklearn.metrics.f1_score(test_labels,\n",
         "                         tf.math.argmax(predicted_labels, axis=1),\n",
         "                         average='macro'\n",
         "                        )\n",
         "\n",
-        "cm = sklearn.metrics.confusion_matrix(eval_labels,\n",
+        "cm = sklearn.metrics.confusion_matrix(test_labels,\n",
         "                                 tf.math.argmax(predicted_labels, axis=1)\n",
         "                                 )\n",
         "\n",
@@ -819,6 +843,69 @@
     {
       "cell_type": "code",
       "source": [
+        "def oos_predict2(model, ood_eval_dataset, **model_kwargs):\n",
+        "  oos_labels = []\n",
+        "  oos_probs = []\n",
+        "\n",
+        "  ood_eval_dataset = ood_eval_dataset.batch(EVAL_BATCH_SIZE)\n",
+        "  for oos_batch in ood_eval_dataset:\n",
+        "    oos_text_batch = oos_batch[\"text\"]\n",
+        "    # print('oos_batch[\"label\"]: ', oos_batch[\"label\"] )\n",
+        "    oos_label_batch = oos_batch[\"label\"] \n",
+        "\n",
+        "    pred_logits = model(oos_text_batch, **model_kwargs)\n",
+        "    # print(pred_logits.shape)\n",
+        "    pred_probs_all = tf.nn.softmax(pred_logits, axis=-1)\n",
+        "\n",
+        "    pred_probs = tf.reduce_max(pred_probs_all, axis=-1)\n",
+        "\n",
+        "    # print('sngp_probs: ', pred_probs_all)\n",
+        "    for pred, text, lbl, prob in zip(pred_logits, oos_text_batch, oos_label_batch, pred_probs):  \n",
+        "      # print('pred: {}\\n prob_sum: {} pred_lbl: {} text: {}\\n lbl: {}\\n\\n\\n '.format(pred,\n",
+        "      #                                                                               np.sum(pred_probs),\n",
+        "      #                                                                               np.argmax(pred_probs),\n",
+        "      #                                                                               text,\n",
+        "      #                                                                               lbl))\n",
+        "      \n",
+        "      print('prob: {:2.2f} argmax: {}  text: {} '.format( np.max(prob), labels_names_dict[np.argmax(pred)], text, ))\n",
+        "\n",
+        "    oos_labels.append(oos_label_batch)\n",
+        "    oos_probs.append(pred_probs)\n",
+        "\n",
+        "  oos_probs = tf.concat(oos_probs, axis=0)\n",
+        "  oos_labels = tf.concat(oos_labels, axis=0) \n",
+        "\n",
+        "  return oos_probs, oos_labels\n",
+        "\n",
+        "# print('NO SNGP MODEL ***************************')\n",
+        "# print('inscope_results: ')\n",
+        "# sngp_probs, ood_labels = oos_predict2(bert_model, ood_eval_dataset_inscope)\n",
+        "# # print('ood_labels: ', ood_labels)\n",
+        "\n",
+        "# print('oos_results: ')\n",
+        "# sngp_probs, ood_labels = oos_predict2(bert_model, ood_eval_dataset_oos)\n",
+        "# # print('ood_labels: ', ood_labels)\n",
+        "\n",
+        "print('\\n\\n\\n')\n",
+        "print('SNGP MODEL ***************************')\n",
+        "# print('inscope_results: ')\n",
+        "# sngp_probs, ood_labels = oos_predict2(sngp_model, ood_eval_dataset_inscope)\n",
+        "# # print('ood_labels: ', ood_labels)\n",
+        "\n",
+        "print('oos_results: ')\n",
+        "sngp_probs, ood_labels = oos_predict2(sngp_model, ood_eval_dataset_oos)\n",
+        "# print('ood_labels: ', ood_labels)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "5yAjmXZhbvVU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "for oos_batch in ood_eval_dataset:\n",
         "  oos_text_batch = oos_batch[\"text\"]\n",
         "  oos_label_batch = oos_batch[\"label\"] \n",
@@ -826,6 +913,51 @@
       ],
       "metadata": {
         "id": "i-7JV2PM0h1a"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sngp_model.save('sngp_model_10epochs')"
+      ],
+      "metadata": {
+        "id": "D0QwL0EOmQWE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sngp_model2 = tf.keras.models.load_model('sngp_model_10epochs', custom_objects={'AdamWeightDecay':optimizer})"
+      ],
+      "metadata": {
+        "id": "Pijh4dx3nLeI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sngp_probs, ood_labels = oos_predict2(sngp_model2, ood_eval_dataset_oos)\n",
+        "# print('ood_labels: ', ood_labels)"
+      ],
+      "metadata": {
+        "id": "WeOaxQY2oDQh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "! zip -r sngp_model_10_epochs sngp_model_10epochs/*"
+      ],
+      "metadata": {
+        "id": "D1Fo0LWCmfAz"
       },
       "execution_count": null,
       "outputs": []
